# box

./: .gitignore  Makefile  Package.resolved  Package.swift  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
Sources/BoxKit/: Allowlist.swift  Assets.swift  BoxExec.swift  BoxNet.swift  ClaudeSettings.swift  ClipboardSync.swift  Commands.swift  Config.swift  Daemon.swift  DaemonClient.swift  Devcontainer.swift  Diagnostics.swift  EgressLog.swift  EmbeddedAssets.swift  EnvInjection.swift  Environment.swift  FsPolicy.swift  HookMounts.swift  ImageBridge.swift  ManagedSettings.swift  NetProbe.swift  NetProbeCross.swift  Runner.swift  SecretInjection.swift  SecretStore.swift  SharedVmnet.swift  Toolchains.swift  Trust.swift  Version.swift  VersionStamp.swift
Sources/box/: BoxCommand.swift
Tests/BoxKitTests/: AllowlistTests.swift  AssetsTests.swift  BoxDirLock.swift  BoxNetTests.swift  ClaudeSettingsTests.swift  CompletionsTests.swift  ConfigLayerTests.swift  ConfigTests.swift  DaemonTests.swift  DeniedHostTests.swift  DevcontainerTests.swift  DiagnosticsTests.swift  EgressLogTests.swift  EnvInjectionTests.swift  ExecWireTests.swift  FsPolicyTests.swift  GuestBehaviorTests.swift  HookMountsTests.swift  ImageRefTests.swift  LifecycleTests.swift  SizeParseTests.swift  (+9 more)
proxy/: .gitignore  Cargo.toml
proxy/src/: allowlist.rs  config.rs  decision.rs  inject.rs  lib.rs  logfmt.rs  main.rs  pinned.rs  proxy.rs
proxy/tests/: check_config.rs
proxy/tests/fixtures/: allowlist.txt  gen-ca.sh  secrets.json
scripts/: gen-embedded-assets.sh
(+7 files in other folders)
