[package]
name = "box-proxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "box egress MITM forward proxy (hudsucker-based)"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "box_proxy"
path = "src/lib.rs"

[[bin]]
name = "box-proxy"
path = "src/main.rs"

[dependencies]
hudsucker = { version = "0.25", default-features = false, features = ["openssl-ca", "rustls-client"] }
http = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
regex = "1"
percent-encoding = "2"
arc-swap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
